# thinkland_products_crud

./: .gitignore  README.md  pyproject.toml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/api/: urls.py
backend/api/v1/: urls.py
backend/api/v1/products/: serializers.py  urls.py  views.py
backend/api/v1/users/: serializers.py  urls.py
backend/config/: settings.py  urls.py
backend/config/components/: auth_password_validators.py  base.py  database.py  debug_settings.py  elasticsearch.py  installed_apps.py  internationalization.py  project_settings.py  rest_framework.py  url_settings.py
backend/products/: admin.py  es_documents.py  models.py  signals.py
backend/products/migrations/: 0001_initial.py
backend/utils/: paginations.py
infra/: .env.example  docker-compose-db.yaml  docker-compose-es.yaml  docker-compose.yaml  nginx.conf
infra/nginx_configs/: default.conf  tl.conf
