[tool.poetry]
name = "thinklandproductapi"
version = "0.1.0"
description = "Thinkland test task"
authors = ["VtlBz <v@vtlbz.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.0.4"
django-split-settings = "1.3.1"
django-debug-toolbar = "4.3.0"
django-elasticsearch-debug-toolbar = "3.0.2"
djangorestframework = "3.15.1"
django-filter = "24.2"
djangorestframework-simplejwt = "5.3.1"
python-dotenv = "1.0.1"
psycopg = {extras = ["binary"], version = "3.1.18"}
gunicorn = "22.0.0"
pydantic = "2.7.1"
Pillow = "10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
